--- a/config/firefox/userChrome.css
+++ b/config/firefox/userChrome.css
@@ -1,72 +1,8 @@
-/* ------------------------------------ */
-/* Firefox Translucent Tabbar for macOS */
-/* ------------------------------------ */
+@import 'includes/cascade-config.css';
 
-:root:not(:-moz-window-inactive) #navigator-toolbox {
-  background-color: transparent !important; 
-}
+@import 'includes/cascade-layout.css';
+@import 'includes/cascade-responsive.css';
+@import 'includes/cascade-floating-panel.css';
 
-:root #TabsToolbar,
-:root #titlebar,
-:root #tabbrowser-tabs {
-   -moz-appearance: -moz-mac-vibrant-titlebar-light !important;
-   background-color: transparent !important;
-}
-
-/* De-emphasize tab icons and names when window is unfocused */
-:root:-moz-window-inactive .tab-content {
-  opacity: 0.6;
-}
-
-/* recolor toolbar button hover/active bg colors to semi-transparent */
-:root {
-   --toolbarbutton-hover-background: color-mix(in srgb, currentColor 11%, transparent) !important;
-   --toolbarbutton-active-background: color-mix(in srgb, currentColor 21%, transparent) !important;
-}
-
-/* make tabs toolbar translucent */
-:root:not(:-moz-window-inactive [lwthemetextcolor="bright"]) #TabsToolbar {
-   -moz-appearance: -moz-mac-vibrant-titlebar-light !important;
-}
-:root:not(:-moz-window-inactive)[lwthemetextcolor="bright"] #TabsToolbar {
-   -moz-appearance: -moz-mac-vibrant-titlebar-dark !important;
-}
-
-:root:-moz-window-inactive[lwthemetextcolor="bright"] {
-  --lwt-accent-color-inactive: rgb(40,40,40) !important;
-}
-
-:root:not([lwthemetextcolor="bright"]) .tabbrowser-tab:not([selected="true"]) {
-  color: #000 !important;
-}
-
-:root[lwthemetextcolor="bright"] {
-  --tab-line-color: hsla(280,30%,80%,0.9) !important;
-}
-
-
-/* improve border visiblity for selected tabs */
-.tab-background:is([selected], [multiselected]):-moz-lwtheme {
-   border:  none !important;
-}
-#tabbrowser-tabs:not([noshadowfortests]) .tab-background:is([selected], [multiselected]) {
-   box-shadow: 0 0 0 var(--tabs-navbar-shadow-size) rgba(0,0,0,.1), 0 1px 5px rgba(0,0,0,.1) !important;
-}
-:root:-moz-window-inactive #tabbrowser-tabs:not([noshadowfortests]) .tab-background:is([selected], [multiselected]) {
-   box-shadow: 0 0 0 var(--tabs-navbar-shadow-size) rgba(0,0,0,.05) !important;
-}
-:root[lwthemetextcolor="bright"] #tabbrowser-tabs:not([noshadowfortests]) .tab-background:is([selected], [multiselected]) {
-   box-shadow: 0 0 0 var(--tabs-navbar-shadow-size) hsla(280,6%,60%,0.5) inset, 0 0 0 var(--tabs-navbar-shadow-size) rgba(0,0,0,.6), 0 1px 5px rgba(0,0,0,.1) !important;
-}
-:root:-moz-window-inactive[lwthemetextcolor="bright"] #tabbrowser-tabs:not([noshadowfortests]) .tab-background:is([selected], [multiselected]) {
-   box-shadow: 0 0 0 var(--tabs-navbar-shadow-size) rgba(0,0,0,.4) !important;
-}
-
-/* border between tab bar and navbar */
-:root #nav-bar {
-  box-shadow: 0 -1px 0 0 hsla(280,6%,0%,0.1), 0 -4px 4px -5px hsla(280,6%,0%,0.2);
-}
-
-:root[lwthemetextcolor="bright"] #nav-bar {
-  box-shadow: 0 -1px 0 0 hsla(280,6%,0%,0.3), 0 -4px 4px -5px hsla(280,6%,0%,0.05) !important;
-}
+@import 'includes/cascade-nav-bar.css';
+@import 'includes/cascade-tabs.css';
