--- a/config/firefox/includes/cascade-nav-bar.css
+++ b/config/firefox/includes/cascade-nav-bar.css
@@ -1,3 +1,7 @@
+#nav-bar, #navigator-toolbox {
+	border-width: 0 !important;
+}
+
 #nav-bar {
 
   padding-block-start: 0px !important;
@@ -18,6 +22,7 @@
   box-shadow: none !important;
 
 }
+
 
 
 #urlbar-background { border: transparent !important; }
