--- a/config/firefox/userChrome.css
+++ b/config/firefox/userChrome.css
@@ -1,4 +1,4 @@
-@import 'includes/cascade-config.css';
+@import 'includes/cascade-config-mouse.css';
 
 @import 'includes/cascade-layout.css';
 @import 'includes/cascade-responsive.css';
