--- a/config/firefox/userChrome.css
+++ b/config/firefox/userChrome.css
@@ -1,30 +1,33 @@
-@import 'includes/cascade-config-mouse.css';
+#nav-bar {
+  border-top: 0px !important;
+}
 
-@import 'includes/cascade-layout.css';
-@import 'includes/cascade-responsive.css';
-@import 'includes/cascade-floating-panel.css';
+:root {
+  --tabs-navbar-separator-style: none !important;
+}
 
-@import 'includes/cascade-nav-bar.css';
-@import 'includes/cascade-tabs.css';
+tabs {
+  counter-reset: tab-counter;
+}
 
-/* "Auto-hide" address bar unless focused (e.g. Ctrl-L) or tab bar is hovered. */
-/* :root { */
-/*     --address-bar-height: 40px; */
-/*     --browser-offset: calc(-1 * (var(--address-bar-height) + 1px)); */
-/* } */
+.tab-label::before {
+  counter-increment: tab-counter;
+  content: counter(tab-counter) " - ";
+}
 
-/* #TabsToolbar { display: none !important; } */
+#urlbar[breakout][breakout-extend] {
+  top: 0 !important;
+  left: 0 !important;
+  width: 100% !important;
+  & > #urlbar-input-container {
+    height: 32px !important;
+  }
+}
 
-/* #navigator-toolbox-background { */
-/*     position: absolute !important;; */
-/* } */
-/* /\*#navigator-toolbox-background ~ #browser { */
-/*     margin-top: var(--browser-offset) !important; */
-/* }*\/ */
-/* #navigator-toolbox-background:hover, #navigator-toolbox-background:focus-within { */
-/*     z-index: 9001 !important; */
-/* } */
-
-/* #TabsToolbar:focus-within { */
-/*   display: block !important; */
-/* } */
+:root:not([customizing]) #navigator-toolbox:not(:hover):not(:focus-within) #nav-bar {
+  max-height: 0;
+  min-height: 0!important;
+  --tridactyl-auto-show-zone: 10px;
+  margin-bottom: calc(-1 * var(--tridactyl-auto-show-zone));
+  opacity: 100;
+}
