--- a/config/firefox/userChrome.css
+++ b/config/firefox/userChrome.css
@@ -1,33 +1,92 @@
-#nav-bar {
-  border-top: 0px !important;
+/* #nav-bar { */
+/*   border-top: 0px !important; */
+/* } */
+
+/* :root { */
+/*   --tabs-navbar-separator-style: none !important; */
+/* } */
+
+/* tabs { */
+/*   counter-reset: tab-counter; */
+/* } */
+
+/* .tab-label::before { */
+/*   counter-increment: tab-counter; */
+/*   content: counter(tab-counter) " - "; */
+/* } */
+
+/* #urlbar[breakout][breakout-extend] { */
+/*   top: 0 !important; */
+/*   left: 0 !important; */
+/*   width: 100% !important; */
+/*   & > #urlbar-input-container { */
+/*     height: 32px !important; */
+/*   } */
+/* } */
+
+/* :root:not([customizing]) #navigator-toolbox:not(:hover):not(:focus-within) #nav-bar { */
+/*   max-height: 0; */
+/*   min-height: 0!important; */
+/*   --tridactyl-auto-show-zone: 10px; */
+/*   margin-bottom: calc(-1 * var(--tridactyl-auto-show-zone)); */
+/*   opacity: 100; */
+/* } */
+
+
+:root{ --uc-navbar-transform: -40px }
+:root[uidensity="compact"]{ --uc-navbar-transform: -34px }
+
+#navigator-toolbox > div{ display: contents; }
+:root[sessionrestored] :where(#nav-bar,#PersonalToolbar,#tab-notification-deck,.global-notificationbox){
+  transform: translateY(var(--uc-navbar-transform))
+}
+:root:is([customizing],[chromehidden*="toolbar"]) :where(#nav-bar,#PersonalToolbar,#tab-notification-deck,.global-notificationbox){
+  transform: none !important;
+  opacity: 1 !important;
 }
 
-:root {
-  --tabs-navbar-separator-style: none !important;
+#nav-bar:not([customizing]){
+  opacity: 0;
+  transition:  tranrlorm 20ms ease 0.3s, opacity 20ms ease 0.3s !important;
+  position: relative;
+  z-index: 2;
+}
+#titlebar{ position: relative; z-index: 3 }
+
+/* Show when toolbox is focused, like when urlbar has received focus */
+#navigator-toolbox:focus-within > .browser-toolbar{
+  transform: translateY(0);
+  opacity: 1;
+  transition-duration: 10ms, 10ms !important;
+  transition-delay: 0s !important;
+}
+/* Show when toolbox is hovered */
+#titlebar:hover ~ .browser-toolbar,
+#nav-bar:hover,
+#nav-bar:hover + #PersonalToolbar{
+  transform: translateY(0);
+  opacity: 1;
+  transition-duration: 10ms, 10ms !important;
+  transition-delay: 0s !important;
+}
+/* This ruleset is separate, because not having :has support breaks other selectors as well */
+#mainPopupSet:has(> #appMenu-popup:hover) ~ #navigator-toolbox > .browser-toolbar{
+  transition-delay: 33ms !important;
+  transform: translateY(0);
+  opacity: 1;
 }
 
-tabs {
-  counter-reset: tab-counter;
-}
+/* Bookmarks toolbar needs so extra rules */
+#PersonalToolbar{ transition: transform 20ms ease 1.8s !important; position: relative; z-index: 1 }
 
-.tab-label::before {
-  counter-increment: tab-counter;
-  content: counter(tab-counter) " - ";
-}
+/* Move up the content view */
+:root[sessionrestored]:not([inFullscreen],[chromehidden~="toolbar"]) > body > #browser{ margin-top: var(--uc-navbar-transform); }
 
 #urlbar[breakout][breakout-extend] {
-  top: 0 !important;
-  left: 0 !important;
-  width: 100% !important;
-  & > #urlbar-input-container {
-    height: 32px !important;
-  }
-}
-
-:root:not([customizing]) #navigator-toolbox:not(:hover):not(:focus-within) #nav-bar {
-  max-height: 0;
-  min-height: 0!important;
-  --tridactyl-auto-show-zone: 10px;
-  margin-bottom: calc(-1 * var(--tridactyl-auto-show-zone));
-  opacity: 100;
+    top: 0 !important;
+    left: 0 !important;
+    width: 100% !important;
+    & > #urlbar-input-container {
+        height: 32px !important;
+    }
 }
